--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js"
   },
+ 
   "keywords": [
     "mern",
     "chat-app"
@@ -15,9 +16,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^9.0.2",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.9",
